<resources>
    <!--IMC -->
    <string name="app_name">Menu</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="age">edad</string>
    <string name="calculate">Calcular</string>
    <string name="result">Tu resultado</string>
    <string name="recalculate">Re-Calcular</string>

    <string name="error">Error</string>
    <string name="title_Bajo_Peso">Bajo Peso</string>
    <string name="description_bajo_peso">Estas por de bajo de lo optimo tu peso y altura.</string>

    <string name="title_peso_normal">Peso Normal</string>
    <string name="description_peso_normal">Estas  en lo optimo  de tu peso y altura.</string>


    <string name="title_sobre_peso">Peso Normal</string>
    <string name="description_sobre_peso">Estas por de encima de lo optimo tu peso y altura.</string>

    <string name="title_obesidad">Peso Normal</string>
    <string name="description_obesidad">Estas Muy por encima  de lo optimo tu peso y altura.</string>

    <!--TODO TITLE -->
    <string name="todo_title">Bienvenido, Daniel</string>
    <string name="todo_categories">Categories</string>
    <string name="todo_tasks">Tareas</string>
    <string name="todo_dialog_add_task">Añade la Tarea</string>
    <string name="todo_dialog_category_bussiness">Negocios</string>
    <string name="todo_dialog_category_personal">Personal</string>
    <string name="todo_dialog_category_other">Otro</string>
    <string name="todo_dialog_add_task_button">Crear tarea</string>
    <string name="_Uno">1</string>
    <string name="_Dos">2</string>
    <string name="_Tres">3</string>
    <string name="_cuatro">4</string>
    <string name="_Cinco">5</string>
    <string name="_Seis">6</string>
    <string name="_Siete">7</string>
    <string name="_Ocho">8</string>
    <string name="_nueve">9</string>
    <string name="reset">C</string>
    <string name="settings">Settings</string>
</resources>