<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calculadora.CalculadoraActivity">

    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:layout_marginTop="52dp"
        android:text=""
        android:hint="0.0"
        android:textAlignment="textEnd"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resulatdo2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/resulatdo2"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:text=""
        android:hint="0.0"
        android:textAlignment="textEnd"
        android:textSize="64sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="203dp"
        android:layout_height="80dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/colorButtonSet"
        android:onClick="presionarDigito"
        android:text="@string/reset"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnCE"
        app:layout_constraintStart_toStartOf="@+id/btnCE"
        app:layout_constraintTop_toBottomOf="@+id/resultado" />

    <Button
        android:id="@+id/btnCE"
        android:layout_width="194dp"
        android:layout_height="80dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/colorButtonSet"
        android:onClick="presionarDigito"
        android:text="CE"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/btnReset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultado"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnDivision"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/colorButtonSet"
        android:onClick="clickOperation"
        android:text="/"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnNueve"
        app:layout_constraintTop_toBottomOf="@+id/btnReset" />

    <Button
        android:id="@+id/btnNueve"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/colorButtonSet"
        android:onClick="presionarDigito"
        android:text="@string/_nueve"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnDivision"
        app:layout_constraintEnd_toStartOf="@+id/btnDivision"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnOcho" />

    <Button
        android:id="@+id/btnOcho"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/colorButtonSet"
        android:onClick="presionarDigito"
        android:text="@string/_Ocho"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnNueve"
        app:layout_constraintEnd_toStartOf="@+id/btnNueve"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSiete" />

    <Button
        android:id="@+id/btnSiete"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/colorButtonSet"
        android:onClick="presionarDigito"
        android:text="@string/_Siete"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnOcho"
        app:layout_constraintEnd_toStartOf="@+id/btnOcho"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnMultiplicacion"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/colorButtonSet"
        android:onClick="clickOperation"
        android:text="X"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCuatro"
        app:layout_constraintTop_toBottomOf="@+id/btnDivision" />

    <Button
        android:id="@+id/btnCuatro"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/colorButtonSet"
        android:onClick="presionarDigito"
        android:text="@string/_Seis"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnMultiplicacion"
        app:layout_constraintEnd_toStartOf="@+id/btnMultiplicacion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCinco" />

    <Button
        android:id="@+id/btnCinco"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/colorButtonSet"
        android:onClick="presionarDigito"
        android:text="@string/_Cinco"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnCuatro"
        app:layout_constraintEnd_toStartOf="@+id/btnCuatro"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSeis" />

    <Button
        android:id="@+id/btnSeis"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/colorButtonSet"
        android:onClick="presionarDigito"
        android:text="@string/_cuatro"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnCinco"
        app:layout_constraintEnd_toStartOf="@+id/btnCinco"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnResta"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/colorButtonSet"
        android:onClick="clickOperation"
        android:text="-"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnTres"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiplicacion" />

    <Button
        android:id="@+id/btnTres"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/colorButtonSet"
        android:onClick="presionarDigito"
        android:text="3"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnResta"
        app:layout_constraintEnd_toStartOf="@+id/btnResta"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDos" />

    <Button
        android:id="@+id/btnDos"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/colorButtonSet"
        android:onClick="presionarDigito"
        android:text="@string/_Dos"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnTres"
        app:layout_constraintEnd_toStartOf="@+id/btnTres"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnUno" />

    <Button
        android:id="@+id/btnUno"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/colorButtonSet"
        android:onClick="presionarDigito"
        android:text="@string/_Uno"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnDos"
        app:layout_constraintEnd_toStartOf="@+id/btnDos"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnPunto"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/colorButtonSet"
        android:onClick="presionarDigito"
        android:text="."
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnCero"
        app:layout_constraintEnd_toStartOf="@+id/btnCero"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnIgual" />

    <Button
        android:id="@+id/btnCero"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/colorButtonSet"
        android:onClick="presionarDigito"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnSumar"
        app:layout_constraintEnd_toStartOf="@+id/btnSumar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPunto" />

    <Button
        android:id="@+id/btnSumar"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/colorButtonSet"
        android:onClick="clickOperation"
        android:text="+"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCero"
        app:layout_constraintTop_toBottomOf="@+id/btnResta" />

    <Button
        android:id="@+id/btnIgual"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/colorButton"
        android:onClick="presionarDigito"
        android:text="="
        android:textSize="25sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnPunto"
        app:layout_constraintEnd_toStartOf="@+id/btnPunto"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>